# rust-competitive-helper

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md
.github/workflows/: rust.yml
rust-competitive-helper-util/: Cargo.toml
rust-competitive-helper-util/src/: build.rs  file_explorer.rs  lib.rs  new_build.rs  old_build.rs
rust-competitive-helper-util/src/tests/: mod.rs  simple.rs
rust-competitive-helper-util/src/tests/outputs/: dbg_macro_main.rs  mod_inside_file.rs  new_io_templates.rs  several_files_in_solution.rs  several_libs_main.rs  simple_main.rs  use_lib_main.rs  use_super_main.rs
src/: archiver.rs  cli.rs  config.rs  domjudge.rs  listener.rs  main.rs  menu.rs  print.rs  task_creator.rs
src/submit/: codeforces.rs  dmoj.rs  domjudge_probe.rs  kattis.rs  mod.rs  oj.rs  submitter.rs
src/util/: build.rs  mod.rs
