[package]
name = "rust_competitive_helper"
description = "Tool to use rust in competitive programming, supports parsing tasks, testing on samples and generating single source file using your library"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.0"
license = "MIT"
repository = "https://github.com/rust-competitive-helper/rust-competitive-helper"
readme = "README.md"
keywords = ["competitive", "icpc", "ioi"]
categories = ["command-line-utilities"]

[[bin]]
name = "rust-competitive-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
dialoguer = "~0.9"
chrono = { version = "~0.4", default-features = false, features = ["clock"] }
itertools = "~0.10"
confy = "~0.4"
rust_competitive_helper_util = { version = "0.1.0", path = "rust-competitive-helper-util" }

[workspace]
members = [
    "rust-competitive-helper-util"
]
