[package]
name = "rust_competitive_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-competitive-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
chrono = "0.4"
itertools = "0.11"
confy = "~0.4"
rust_competitive_helper_util = {path = "rust-competitive-helper-util"}

crossterm = "0.27"

reqwest = { version="0.11.22", features = [ "blocking", "cookies", "rustls-tls" ], default-features = false }
reqwest_cookie_store = "0.6.0"
cookie_store = "0.20.0"

aes = "0.8"
cbc = "0.1"
hex = "0.4"
rand = "0.8"
regex = "1.9"
clipboard = "0.5"


[workspace]
members = [
    "rust-competitive-helper-util"
]
