[package]
name = "rust_competitive_helper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-competitive-helper"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
chrono = "0.4"
itertools = "0.11"
confy = "0.4"
rust_competitive_helper_util = { path = "rust-competitive-helper-util" }

crossterm = "0.28"

rand = "0.8"
regex = "1.11"
clipboard = "0.5"


[workspace]
members = [
    "rust-competitive-helper-util"
]
