[package]
name = "rust_competitive_helper_util"
description = "rust-competitive-helper utilities for generating code, handling solution modules and tests"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/rust-competitive-helper/rust-competitive-helper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"

[dev-dependencies]
expect-test = "1.2.1"
