[package]
name = "rust_competitive_helper_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
expect-test = "1.5"
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "parsing"] }
syn_old = { package = "syn", version = "1.0.74", features = ["full"] }
rustminify = "0.2"
prettyplease = "0.2"
